Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4436

HA fix qpidd crash when mgmt-enable=no

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++ Clustering
    • None

    Description

      See also https://bugzilla.redhat.com/show_bug.cgi?id=875660

      qpidd crashes if configured with mgmt-enable=no and loading the HA plugin. Caused by incorrect assumption in HA that management is enabled.
      Added a fix to skip HA initialization if management is off.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: