QPID-4436: HA fix qpidd crash when mgmt-enable=no

- Don't initialize HaBroker if management is disabled.
- Fix use of constants from another compilation unit in QueueReplicator.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1409327 13f79535-47bb-0310-9956-ffa450edef68